<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFF"
        tools:context=".mainandsecondactivity.SecondActivity">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="479dp"
            android:text="@string/Profile"
            android:textColor="#C80303"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/imgFood"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgPicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="85dp"
            android:contentDescription="@string/DisplayInfo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvInputNameSurname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="230dp"
            android:layout_marginTop="104dp"
            android:text="TextView"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvInputGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="230dp"
            android:layout_marginTop="12dp"
            android:text="TextView"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <TextView
            android:id="@+id/tvInputAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="230dp"
            android:layout_marginTop="34dp"
            android:text="TextView"
            android:textColor="@android:color/background_dark"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvInputNameSurname" />

        <TextView
            android:id="@+id/tvInputHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="230dp"
            android:layout_marginTop="189dp"
            android:text="TextView"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tvInputWeight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvInputWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="230dp"
            android:layout_marginTop="220dp"
            android:layout_marginBottom="18dp"
            android:text="TextView"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tvFoodTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            app:layout_constraintVertical_bias="0.0" />

        <TextView

            android:id="@+id/tvFoodTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="176dp"
            android:layout_marginTop="340dp"
            android:layout_marginEnd="177dp"
            android:text="@string/foodTitle"
            android:textColor="#C80303"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.526"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/rdGroup"
            android:layout_width="168dp"
            android:layout_height="94dp"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="400dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvFoodTitle">

            <RadioButton
                android:id="@+id/rbHamburger"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="radioClick"
                android:text="@string/Hamburger"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/rbPizza"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="radioClick"
                android:text="@string/Pizza"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/rbChicken"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="radioClick"
                android:text="@string/Chichken"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />
        </RadioGroup>

        <ImageView
            android:id="@+id/imgFood"
            android:layout_width="271dp"
            android:layout_height="232dp"
            android:layout_marginStart="55dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="55dp"
            android:layout_marginBottom="40dp"
            app:layout_constraintBottom_toTopOf="@+id/btnBack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rdGroup"
            tools:srcCompat="@tools:sample/avatars" />

        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="160dp"
            android:onClick="onClick"
            android:text="@string/back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgFood" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
